add queue and endpoint to select spells
