# spellcards-app/src/main/java/io/github/viturin/spellcards/application/model/SpellCardJobMessage.java
@@ -1,0 +1,6 @@
+package io.github.viturin.spellcards.application.model;
+
+import java.util.List;
+
+public record SpellCardJobMessage(String jobId, List<String> spellNames) {
+}
